--- a/Source Code/2025 Feb/deedy_resume-reversed.tex
+++ b/Source Code/2025 Feb/deedy_resume-reversed.tex
@@ -78,8 +78,8 @@
 %     TITLE NAME
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\namesection{John Doe}{ %\urlstyle{same}\href{http://example.com}{example.com}| \href{http://example2.co}{example2.co}\\
-\href{mailto:john.doe@example.com}{john.doe@example.com} | \href{tel:11111111111}{111.111.1111}
+\namesection{Chhatresh Sehgal}{ %\urlstyle{same}\href{http://example.com}{example.com}| \href{http://example2.co}{example2.co}\\
+\href{mailto:john.doe@example.com}{chhatseh@gmail.com} | \href{tel:11111111111}{+666 3974 2505}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -95,38 +95,38 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
-\runsubsection{Company A}
+\runsubsection{Coforge}
 \descript{| Advanced Development Intern }
-\location{May 2018 – Aug 2018 | Somewhere, XX}
+\location{May 2024 - July 2024 | Bangna, Bangkok-10260, Thailand}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
 \item Developed a cloud-based solution to automate and enhance the engineering process for network installation using AWS and Python.
-\item Worked with other teams to create a system to collect and visualize telemetry data of network elements in real time using AWS, Python, and DOMO.
-\item Consulted with other teams to jump start cloud-technology adoption and solutions throughout the company.
-\item Contributed to initial planning for optics-alignment system utilizing AWS, reinforcement learning, and an IoT architecture.
+% \item Worked with other teams to create a system to collect and visualize telemetry data of network elements in real time using AWS, Python, and DOMO.
+% \item Consulted with other teams to jump start cloud-technology adoption and solutions throughout the company.
+% \item Contributed to initial planning for optics-alignment system utilizing AWS, reinforcement learning, and an IoT architecture.
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Company B}
-\descript{| Intern }
-\location{Feb 2017 – Nov 2017 | Somewhere, XX}
-\begin{tightemize}
-\item Coordinated with multiple departments to lead a software product evaluation resulting in a fit-for-purpose verdict and provided a recommendation on moving forward.
-\item Organized meetings with the vendor to receive in-depth product information and answers to cross-departmental questions.
-\item Participated on the Web Development Taskforce to provide AngularJS sites to internal customers.
-\item Participated in an internal CodeJam to prototype a blockchain application for managing a model supply-chain.
-\item Worked with a team to plan executive visit and team-building exercise for 200 employees.
-\end{tightemize}
-\sectionsep
+% \runsubsection{Company B}
+% \descript{| Intern }
+% \location{Feb 2017 – Nov 2017 | Somewhere, XX}
+% \begin{tightemize}
+% \item Coordinated with multiple departments to lead a software product evaluation resulting in a fit-for-purpose verdict and provided a recommendation on moving forward.
+% \item Organized meetings with the vendor to receive in-depth product information and answers to cross-departmental questions.
+% \item Participated on the Web Development Taskforce to provide AngularJS sites to internal customers.
+% \item Participated in an internal CodeJam to prototype a blockchain application for managing a model supply-chain.
+% \item Worked with a team to plan executive visit and team-building exercise for 200 employees.
+% \end{tightemize}
+% \sectionsep
 
-\runsubsection{My University ITS}
-\descript{| Assistant Support Specialist }
-\location{Aug 2015 – Oct 2016 | Somewhere, XX}
-\begin{tightemize}
-\item Interacted with clients to assess their problems and implement a solution in an efficient, friendly manner.
-\item Prepared workstations and laptops for future use by company employees.
-\item Created scripts to automate common tasks and increase productivity.
-\end{tightemize}
+% \runsubsection{My University ITS}
+% \descript{| Assistant Support Specialist }
+% \location{Aug 2015 – Oct 2016 | Somewhere, XX}
+% \begin{tightemize}
+% \item Interacted with clients to assess their problems and implement a solution in an efficient, friendly manner.
+% \item Prepared workstations and laptops for future use by company employees.
+% \item Created scripts to automate common tasks and increase productivity.
+% \end{tightemize}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -232,9 +232,9 @@
 
 \section{Education}
 
-\subsection{My University}
-\descript{Bachelor of Science in Computer Science with minors in Mathematics and Statistics}
-\location{Expected Dec 2019 | Somewhere, XX}
+\subsection{University of Nottingham}
+\descript{BSc (Hons) Computer Science with Artificial Intelligence}
+\location{Graduation: July 2025}
 % College of Engineering \\
 Dean's List (All Semesters) \\
 \location{ Cum. GPA: 4.0 / 4.0}
@@ -295,8 +295,8 @@ National Merit Scholarship Finalist \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Links}
-Github:// \href{https://github.com/}{\bf JohnDoe} \\
-LinkedIn://  \href{https://www.linkedin.com/}{\bf johndoe}
+Github:// \href{https://github.com/}{\bf Chhat2206} \\
+LinkedIn://  \href{https://www.linkedin.com/}{\bf chhatseh}
 \sectionsep
 
 \end{minipage}
