Added READ-ME, Implemented Projects & Coursework Section

--- a/Source Code/2025 Feb/deedy_resume-reversed.tex
+++ b/Source Code/2025 Feb/deedy_resume-reversed.tex
@@ -133,24 +133,63 @@
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% \section{Projects}
+% \runsubsection{Space Robotics Team}
+% \descript{| Path-Planning Lead}
+% \location{Jan 2018 – Present | Somewhere, XX}
+% \begin{tightemize}
+% \item Spearhead the development effort for the path-planning functionality of a team of three robots.
+% \item ROS provides movement servers and the planning is being implemented in Python to allow for fully-autonomous operation.
+% \end{tightemize}
+% \sectionsep
+
+% \runsubsection{Chit Chat}
+% \descript{| Class Project for Distributed Client-Server Programming}
+% \location{Jan 2018 – May 2018 | Somewhere, XX}
+% \begin{tightemize}
+% \item Lead the development of \textbf{\href{https://github.com/user/repo}{Chit Chat}}, an anonymous chat application created as a class project.
+% \item Chit Chat provides real-time communication while utilizing a PHP backend and AngularJS frontend.
+% \end{tightemize}
+% \sectionsep
+
 \section{Projects}
-\runsubsection{Space Robotics Team}
-\descript{| Path-Planning Lead}
-\location{Jan 2018 – Present | Somewhere, XX}
+\runsubsection{Comparative Analysis of 1D Bin Packing Algorithms}
+\descript{| Algorithm Researcher}
+\location{2023 | GitHub}
 \begin{tightemize}
-\item Spearhead the development effort for the path-planning functionality of a team of three robots.
-\item ROS provides movement servers and the planning is being implemented in Python to allow for fully-autonomous operation.
+\item Implemented genetic algorithm and ant colony optimization solutions in Java
+\item Analyzed time/space complexity across different algorithm implementations
+\item Developed performance metrics comparison framework
 \end{tightemize}
 \sectionsep
 
-\runsubsection{Chit Chat}
-\descript{| Class Project for Distributed Client-Server Programming}
-\location{Jan 2018 – May 2018 | Somewhere, XX}
+\runsubsection{Retro Brick Breaker Game}
+\descript{| Java Developer}
+\location{2022 | GitHub}
 \begin{tightemize}
-\item Lead the development of \textbf{\href{https://github.com/user/repo}{Chit Chat}}, an anonymous chat application created as a class project.
-\item Chit Chat provides real-time communication while utilizing a PHP backend and AngularJS frontend.
+\item Built modernized block breaker game with power-up system using Java Swing
+\item Implemented collision detection physics and score tracking
 \end{tightemize}
 \sectionsep
+
+\runsubsection{Flower Image Segmentation}
+\descript{| Computer Vision Engineer}
+\location{2023 | GitHub}
+\begin{tightemize}
+\item Created Python pipeline using K-means clustering and watershed algorithm
+\item Achieved 92\% segmentation accuracy on complex botanical datasets
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Dynamic Regularization in RL}
+\descript{| Machine Learning Researcher}
+\location{2024 | GitHub}
+\begin{tightemize}
+\item Implemented DQN with adaptive regularization for CartPole environment
+\item Improved task-switching efficiency by 40\% vs baseline models
+\end{tightemize}
+\sectionsep
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     RESEARCH
@@ -265,26 +304,27 @@ Artificial Intelligence \textbullet{} Automation \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Coursework}
-\subsection{Graduate}
-Analysis of Algorithms
 \sectionsep
 
 \subsection{Undergraduate}
-Artificial Intelligence \\
-{\footnotesize \textit{\textbf{(Teaching Assistant) }}} \\
-AI Robotics \\
-Operating Systems I \\
-Calculus I-IV \\
-Data Analysis I \\
-Introduction to Probability \\
+Autonomous Robotic Systems (73) \\
+Symbolic Artificial Intelligence (76) \\
+Computer Security (Pending) \\
+Designing Intelligent Agents (Pending) \\
+{\footnotesize \textit{\textbf{Core Foundations:}}} \\
+Algorithms \& Efficiency  \textbullet{} \\
+Image Processing (81) \\
+Languages \& Computation (86) \\
+\textbullet{} AI Methods \\
 \sectionsep
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Societies
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Societies}
-Association for Computing Machinery (ACM)\\
+Rock Climbing Soiciety\\
 Scrum Alliance Certified ScrumMaster\\
 University Honors College\\
 National Merit Scholarship Finalist \\
